<resources>
    <string name="app_name">梦想音乐</string>

    <string name="text_navigation_drawer_open">Open navigation drawer</string>
    <string name="text_navigation_drawer_close">Close navigation drawer</string>
    <string name="transition_name_cover">cover</string>

    <string name="nav_header_title">梦想为帆·Android</string>

    <string name="text_history_play">历史最多播放</string>
    <string name="text_play_list">播放列表</string>
    <string name="text_play">播放</string>
    <string name="text_play_times">次</string>
    <string name="text_play_number">2</string>
    <string name="text_see_more">查看更多</string>
    <string name="text_created_song_list">创建的歌单(2)</string>
    <string name="text_new_song_list">新建</string>
    <string name="text_my_song_list">我的歌单</string>
    <string name="text_favorite_song">收藏喜欢的歌曲</string>
    <string name="text_favorite_song_number">0首</string>
    <string name="text_all_song">全部歌曲</string>
    <string name="text_my_favorite">我的收藏</string>
    <string name="text_recent_release">最近播放</string>
    <string name="text_search_music">搜索音乐</string>
    <string name="text_song_list_name">歌单名</string>
    <string name="text_song_list_description">描述</string>
    <string name="text_artist">艺术家：</string>
    <string name="text_album">专辑：</string>

    <string name="text_song_list_description_value">收藏喜欢的歌单</string>
    <string name="text_song_list_create_time">创建时间：2019-03-30</string>
    <string name="text_song_list_edit_and_add_prompt">快写下你歌单的名字与描述信息吧</string>


    <string name="text_history_number">3次</string>
    <string name="text_history_play_time_most">播放次数最多的10首歌</string>
    <string name="text_play_mode_and_number">随机播放1首歌曲</string>
    <string name="text_search_all_song">从4首歌曲中检索</string>

    <string name="text_song">歌曲：</string>
    <string name="text_add_to_list">添加至列表</string>
    <string name="text_song_detail">歌曲详情</string>
    <string name="text_delete">删除</string>

    <string name="text_edit_song_list_information">编辑歌单信息</string>
    <string name="text_delete_song_list">删除歌单</string>

    <string name="text_total_song_time">04:46</string>
    <string name="text_now_song_time">02:30</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>

    <string name="number_one_singer_name">林俊杰</string>
    <string name="number_one_song_name">Always Online</string>
    <string name="number_one_song_duration_time">03:46</string>

    <string name="number_two_song_name">体面</string>
    <string name="number_two_singer_name">于文文</string>

    <string name="number_three_song_name">说散就散</string>
    <string name="number_three_singer_name">袁娅维</string>

    <string name="prompt_load_message">加载中……</string>
    <string name="text_choose_date">选择时间</string>
    <string name="text_prompt">提示</string>
    <string name="text_ok">确定</string>
    <string name="text_cancel">取消</string>

    <string name="label_music_player_welcome">梦想音乐随时为您点歌</string>

    <!--消息-->
    <string name="message_favorite_music_success">收藏歌曲成功</string>
    <string name="message_favorite_music_fail">你已经收藏了该歌曲</string>
    <string name="message_play_music_success">播放音乐成功</string>
    <string name="message_confirm_favorite_song_list"> 你确定要收藏整个歌单吗？</string>
    <string name="message_confirm_delete_song_list"> 你确定要删除该歌单吗？</string>
    <string name="message_delete_song_list_success"> 删除歌单成功 </string>
    <string name="message_confirm_delete_song"> 你确定要删除该歌曲吗？</string>
    <string name="message_no_music_to_look">没有当前歌曲需要看的</string>
    <string name="message_delete_music_success">删除歌曲成功</string>
    <string name="message_add_list_success">添加至列表成功</string>
    <string name="message_add_list_fail">列表有这首歌了</string>
    <string name="message_press_again_finish">再按一次退出程序</string>
    <string name="message_no_music_and_go_add_music">列表没有歌曲，去添点歌吧</string>
    <!--错误信息-->
    <string name="error_progress">程序出错啦</string>
    <string name="error_load_date">加载数据失败</string>
    <string name="error_get_permission_and_finish">无法获得权限,程序将退出！</string>

    <!--替换字符串-->
    <string name="replace_follow_some_music_search">从 * 首歌曲中检索</string>
    <string name="replace_search_music_result">一共检索出 * 首歌曲</string>
    <string name="replace_random_play_some_music">随机播放 * 首歌曲</string>
    <string name="replace_create_song_list">创建的歌单(*)</string>

    <!--播放格式-->
    <string name="play_mode_cycle">循环播放</string>
    <string name="play_mode_random">随机播放</string>
</resources>
