<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="76dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingEnd="4dp"
    android:paddingStart="4dp"
    android:background="@drawable/liner_layout_water_selector"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/item_search_music_number_layout"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="match_parent"
        android:gravity="center">
        <ImageView
            android:id="@+id/item_search_music_number_image_view"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_horn"
            android:tint="@color/gray"
            android:textStyle="bold"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/item_search_music_number_text_view"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:textSize="16sp"
            android:text="@string/one"
            android:lines="1"
            android:gravity="center" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_weight="74"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="8dp">
        <com.tgg.musicplayer.widget.MarqueeText
            android:id="@+id/item_search_music_song_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_one_song_name"
            android:textSize="15sp"
            android:textColor="@color/black"
            style="@style/MarqueeTextStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.tgg.musicplayer.widget.MarqueeText
            android:id="@+id/item_search_music_singer_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:text="@string/text_artist"
            style="@style/MarqueeTextStyle"
            app:layout_constraintTop_toBottomOf="@id/item_search_music_song_name_text_view"
            app:layout_constraintStart_toStartOf="@id/item_search_music_song_name_text_view"/>
        <com.tgg.musicplayer.widget.MarqueeText
            android:id="@+id/item_search_music_album_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_album"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            style="@style/MarqueeTextStyle"
            app:layout_constraintTop_toBottomOf="@id/item_search_music_singer_name_text_view"
            app:layout_constraintStart_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="match_parent"
        android:gravity="center_vertical|right">
        <TextView
            android:id="@+id/item_search_music_duration_time_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_one_song_duration_time"
            android:textSize="13dp"/>
    </RelativeLayout>
</LinearLayout>