<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingEnd="4dp"
    android:paddingStart="4dp"
    android:background="@drawable/liner_layout_water_selector"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/item_song_simple_detail_number"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center">
        <ImageView
            android:id="@+id/item_song_simple_detail_number_image_view"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_horn"
            android:tint="@color/gray"
            android:textStyle="bold"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/item_song_simple_detail_number_text_view"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:text="@string/one"
            android:gravity="center"
            android:textColor="@color/black" />
    </RelativeLayout>
    <TextView
        android:id="@+id/item_song_simple_detail_song_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_one_song_name"
        app:layout_constraintStart_toEndOf="@id/item_song_simple_detail_number"
        app:layout_constraintTop_toTopOf="@id/item_song_simple_detail_number"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/item_song_simple_detail_singer_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_one_singer_name"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/item_song_simple_detail_song_name_text_view"
        app:layout_constraintTop_toBottomOf="@id/item_song_simple_detail_song_name_text_view"
        android:layout_marginTop="2dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>