<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/half_transparent_black"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/play_list_all_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:background="@color/ghost_white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_song"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_one_song_name"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingTop="2dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_marginStart="48dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/number_one_singer_name" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/ic_horizontal_line">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:background="@color/white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/ic_add"
                android:tint="@color/colorPrimary"
                android:contentDescription="@string/text_add_to_playing_list"
                android:layout_marginStart="4dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_add_to_playing_list"
                android:layout_marginStart="12dp"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:background="@color/white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/ic_detail"
                android:tint="@color/colorPrimary"
                android:contentDescription="@string/text_song_detail"
                android:layout_marginStart="4dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_song_detail"
                android:layout_marginStart="12dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:background="@color/white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/ic_delete"
                android:tint="@color/colorPrimary"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/text_delete"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_delete"
                android:layout_marginStart="12dp"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp">

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>