<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/half_transparent_black"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/play_list_all_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:background="@color/ghost_white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp">
        <LinearLayout
            android:id="@+id/song_list_operation_edit_song_list_info_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:background="@color/white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/ic_detail"
                android:tint="@color/colorPrimary"
                android:contentDescription="@string/text_edit_song_list_information"
                android:layout_marginStart="4dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_edit_song_list_information"
                android:layout_marginStart="12dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/song_list_operation_delete_song_list_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:background="@color/white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/ic_delete"
                android:tint="@color/colorPrimary"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/text_delete"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/text_delete_song_list"
                android:layout_marginStart="12dp"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>