<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingEnd="4dp"
    android:paddingStart="4dp"
    android:background="@drawable/linerlayout_water_selector"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/item_song_detail_number_layout"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="match_parent"
        android:gravity="center">
        <ImageView
            android:id="@+id/item_song_detail_number_image_view"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_horn"
            android:tint="@color/gray"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/item_song_detail_number_text_view"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:textSize="16sp"
            android:text="@string/one"
            android:lines="1"
            android:gravity="center" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/item_song_detail_image_layout"
        android:layout_width="0dp"
        android:layout_weight="20"
        android:layout_height="match_parent"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">
        <ImageView
            android:id="@+id/item_song_detail_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/album_cover_03"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_weight="74"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="8dp">
        <com.tgg.musicplayer.widget.MarqueeText
            android:id="@+id/item_song_detail_song_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_one_song_name"
            android:textSize="15sp"
            android:textColor="@color/black"
            style="@style/MarqueeTextStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.tgg.musicplayer.widget.MarqueeText
            android:id="@+id/item_song_detail_singer_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/number_one_singer_name"
            style="@style/MarqueeTextStyle"
            app:layout_constraintTop_toBottomOf="@id/item_song_detail_song_name_text_view"
            app:layout_constraintStart_toStartOf="@id/item_song_detail_song_name_text_view"/>
        <ImageView
            android:id="@+id/item_song_duration_time_image_view"
            android:layout_width="10dp"
            android:layout_height="10dp"
            app:srcCompat="@drawable/ic_fill_love"
            android:layout_marginTop="6dp"
            android:tint="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/item_song_detail_singer_name_text_view"
            app:layout_constraintStart_toStartOf="@id/item_song_detail_singer_name_text_view"/>

        <TextView
            android:id="@+id/item_song_detail_duration_time_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_one_song_duration_time"
            android:layout_marginTop="2dp"
            android:layout_marginStart="16dp"
            android:textSize="13dp"
            app:layout_constraintTop_toBottomOf="@id/item_song_detail_singer_name_text_view"
            app:layout_constraintStart_toEndOf="@id/item_song_duration_time_image_view"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="match_parent"
        android:gravity="center">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/ic_menu_point"
            android:tint="@color/gray"
            android:background="@drawable/linerlayout_water_selector"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="5"
        android:layout_height="match_parent">
    </RelativeLayout>
</LinearLayout>